Add attribution for neurons2

--- a/content/about.Rmd
+++ b/content/about.Rmd
@@ -28,6 +28,7 @@ I am a statistician working for the Government of South Australia. I started thi
 
 I also provide advice to government on the use of quantitative information including the construction of automated decision making systems. My work in this field led me to a [Churchill Fellowship](https://www.churchilltrust.com.au/fellows/detail/4329/Owen+Churches) in 2019 to look at ethical and just regulation of artificial intelligences.
 
+I still collaborate with the [CAIN Laboratory](http://www.cain.science/) at UniSA. The beautiful knitted neurons on the landing page of this blog were made by the staff and students there. 
 
 
 
