--- a/content/about.Rmd
+++ b/content/about.Rmd
@@ -11,7 +11,7 @@ title: About me
 
 ## Long version
 ### The past
-I completed my PhD at the [Univeristy of Cambridge](https://www.autismresearchcentre.com/people_Churches) in 2011 and until 2017, I was a neuroscientist. There is a good list of my academic publications [here](https://scholar.google.com/citations?user=nTXN-X8AAAAJ&hl=en). I quite enjoyed a lot about being an academic. I did some lectures where I lead the class in protest against the tyrany of frequentist statistics^[With appreciation and appologies to Bob Dylan]:
+I completed my PhD at the [Univeristy of Cambridge](https://www.autismresearchcentre.com/people_Churches) in 2011 and until 2017, I was a neuroscientist. There is a good list of my academic publications [here](https://scholar.google.com/citations?user=nTXN-X8AAAAJ&hl=en). I quite enjoyed a lot about being an academic. I did some lectures where I lead the class in protest against the tyranny of frequentist statistics^[With appreciation and apologies to Bob Dylan]:
 
 ```{r echo = FALSE}
 blogdown::shortcode("youtube", "2ze-_jA1X94")
@@ -28,6 +28,4 @@ I am a statistician working for the Government of South Australia. I started thi
 
 I also provide advice to government on the use of quantitative information including the construction of automated decision making systems. My work in this field led me to a [Churchill Fellowship](https://www.churchilltrust.com.au/fellows/detail/4329/Owen+Churches) in 2019 to look at ethical and just regulation of artificial intelligences.
 
-I still collaborate with the [CAIN Laboratory](http://www.cain.science/) at UniSA. The beautiful knitted neurons on the landing page of this blog were made by the staff and students there. 
-
-
+I still collaborate with the [CAIN Laboratory](http://www.cain.science/) at UniSA. The beautiful knitted neurons on the landing page of this blog were made by the staff and students there.
