Include CAIN attribution

--- a/content/post/2019-05-16-its-my-pleasure.Rmd
+++ b/content/post/2019-05-16-its-my-pleasure.Rmd
@@ -35,7 +35,9 @@ Earlier this year, the excellent Museum of Discovery ([MOD](https://mod.org.au/)
 
 Hence, building and investigating the results from a recommendation engine for pleasure might be an interesting way to make some of the ethical problems with these ubiquitous but unobserved algorithms explicit. All I would need is a large data set containing the degree to which different constructs are judged to be associated with pleasure! But where would one find such a thing?
 
-Luckily my friend [Simon De Deyne](https://simondedeyne.me/) and colleagues have conducted a truly remarkable [study](https://link.springer.com/article/10.3758/s13428-018-1115-7)^[You can [download](https://smallworldofwords.org/articles/2018.DeDeyne.The%20Small%20World%20of%20Words%20English%20word%20association%20norms%20for%20over%2012,000%20cue%20words.BRM.pdf) it for free] of word associations known as the Small World of Words (SWoW). In their experiment (which you can [try](https://smallworldofwords.org/en) for yourself), participants were shown a prompt word and then asked to respond with an associated word. The data set they collected is remarkable. And importantly for this application, one of the prompt words was "pleasure".
+Luckily my friend [Simon De Deyne](https://simondedeyne.me/) and colleagues have conducted a truly remarkable [study](https://link.springer.com/article/10.3758/s13428-018-1115-7)^[You can [download](https://smallworldofwords.org/articles/2018.DeDeyne.The%20Small%20World%20of%20Words%20English%20word%20association%20norms%20for%20over%2012,000%20cue%20words.BRM.pdf) it for free] of word associations known as the Small World of Words (SWoW). In their experiment (which you can [try](https://smallworldofwords.org/en) for yourself), participants were shown a prompt word and then asked to respond with an associated word. The data set they collected is remarkable. In fact, I have some experience with the SWoW paradigm already through working with Simon and Hannah Keage from the [CAIN Lab](http://www.cain.science/) on a version of the experiment in which EEG was collected while participants thought of their responce words.
+
+Importantly for this application, one of the words included in the SWoW study is "pleasure".
 
 Once again, there is a nice graph solution to this in which:
 
